[gd_scene load_steps=4 format=2]

[ext_resource path="res://FireBallCannon.gd" type="Script" id=1]
[ext_resource path="res://Sprites/cannon.png" type="Texture" id=2]
[ext_resource path="res://FireBall.tscn" type="PackedScene" id=3]

[node name="FireBallCannon" type="StaticBody2D"]
z_index = -1
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="FireRateTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
process_parent = true
physics_process_parent = true

[node name="FireBall" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -13 )

[connection signal="timeout" from="FireRateTimer" to="." method="_on_FireRateCannon_timeout"]
